# Genesis-OS

./: .gitignore  CMakeLists.txt  build  compile_commands.json
.cache/clangd/index/: Config.h.389BC9EA0337C506.idx  PageFlipper.h.9CAE84C30D46D32A.idx  _fixes.hpp.04AD9F3AEDEA50FF.idx  _vectorize.hpp.470C48A56301A03F.idx  common.hpp.F0465815D15CD205.idx  compute_common.hpp.742A52C60A554918.idx  compute_vector_relational.hpp.4CEAFE99940A5C89.idx  constants.hpp.DB7D89656DEF8FB4.idx  constants.inl.02FE7B614116A7A8.idx  exponential.hpp.4994DA83CCFA0650.idx  func_common.inl.BA1FFC2D93324BC1.idx  func_exponential.inl.742E4A1FEB5A0DA8.idx  func_geometric.inl.B8A1B29740BD2CFE.idx  func_integer.inl.5999ADBC5D299184.idx  func_matrix.inl.BD085D373F064BA4.idx  func_packing.inl.1697884B4D70DFCA.idx  func_trigonometric.inl.EA1D5AA9C3E76588.idx  func_vector_relational.inl.0CC0C5EDBD65BCF1.idx  fwd.hpp.2B4CC39D8C3FA5B2.idx  geometric.hpp.DD4E6CE5B6AC05E5.idx  glm.hpp.9BF3DD4E8477E7E4.idx  integer.hpp.5A3E630FA29C5B2F.idx  main.cpp.27418C324640AAAC.idx  mat2x2.hpp.E7DC865554B3B96E.idx  mat2x3.hpp.5F2A8CC4CAE7BD5A.idx  mat2x4.hpp.F3FDDFC834A58E7A.idx  mat3x2.hpp.41E7E88C9DB779BE.idx  mat3x3.hpp.5853D5E4B59AB4DF.idx  mat3x4.hpp.65BE7C9BCB06B5BD.idx  mat4x2.hpp.A6C39FB2EB7736A9.idx  mat4x3.hpp.C0C2E556721933F5.idx  mat4x4.hpp.432E567B286A8A76.idx  matrix.hpp.8A70B9869D7CB45C.idx  matrix_clip_space.hpp.7A106CCCC2254BCF.idx  matrix_clip_space.inl.AFA188FE23DDB7B4.idx  matrix_double2x2.hpp.D5E00B46D3C1279A.idx  matrix_double2x2_precision.hpp.D053DE185F1C37CB.idx  matrix_double2x3.hpp.A5F51A9707435B2E.idx  matrix_double2x3_precision.hpp.103A7F908A3F6190.idx  matrix_double2x4.hpp.D1060B1C36CE7DA0.idx  (+108 more)
Data/Shaders/: shader.glsl
genesis-3Dengine/: CMakeLists.txt
genesis-3Dengine/include/Genesis3D/: Buffer.h  GraphicsContext.h  Mesh.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
genesis-3Dengine/include/Genesis3D/Platform/EGL/: EGLBuffer.h  EGLContext.h  EGLRendererAPI.h  EGLShader.h  EGLTexture.h  EGLVertexArray.h
genesis-3Dengine/src/: Buffer.cpp  GraphicsContext.cpp  Mesh.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
genesis-3Dengine/src/Platform/EGL/: EGLBuffer.cpp  EGLContext.cpp  EGLRendererAPI.cpp  EGLShader.cpp  EGLTexture.cpp  EGLVertexArray.cpp
genesis-core/: CMakeLists.txt
genesis-core/include/Genesis/Core/: Config.h  GC_Assert.h  Log.h
genesis-core/include/Genesis/Screen/: Display.h  PageFlipper.h
genesis-core/src/: Display.cpp  Log.cpp  PageFlipper.cpp
genesis-ui/: CMakeLists.txt
genesis-ui/src/: main.cpp
